--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#42b983" />
     <meta name="description" content="A simple shopping list app with Telegram bot integration" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
